# gql-defrag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  pyanalyze.yml  test.yml
gql_defrag/: __init__.py  __main__.py  defrag.py  finder.py
tests/: test.py
